fix: image squishing when window is sized so text is longer than single image

--- a/about/resume.css
+++ b/about/resume.css
@@ -35,6 +35,7 @@
     border-radius: 1vh;
     width: 25vw;
     cursor: zoom-in;
+    align-self: center;
 }
 
 .resume-header {
